<resources>
    <string name="app_name">MyFoods</string>
    <string name="label_expiring">Products</string>
    <string name="label_locations">Locations</string>
    <string name="label_settings">Settings</string>
    <string name="label_search">Search</string>
    <string name="label_scan">Scan</string>

    <string name="url_product_data" translatable="false">https://world.openfoodfacts.org/api/v0/product/%s.json</string>

    <string name="ldp_day">D</string>
    <string name="ldp_month">M</string>
    <string name="ldp_year">Y</string>

    <string name="article_name">Name</string>
    <string name="description_add">Add article</string>
    <string name="description_product_photo">Product image</string>
    <string name="action_add_manually">Add manually</string>
    <string name="action_scan">Scan</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_continue">Continue</string>
    <string name="action_delete">Delete</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_undo">Undo</string>
    <string name="description_toggle_flashlight">Toggle flashlight</string>

    <string name="dialog_cancel_edit_title">Cancel editing?</string>
    <string name="warning_item_deleted">Article marked as used up</string>

    <string name="timeframe_expired">Expired</string>
    <string name="timeframe_expired_recently">Expired recently</string>
    <string name="timeframe_today">Today</string>
    <string name="timeframe_tomorrow">Tomorrow</string>
    <string name="timeframe_this_week">This week</string>
    <string name="timeframe_next_week">Next week</string>
    <string name="timeframe_this_month">This month</string>
    <string name="timeframe_next_month">Next month</string>
    <string name="timeframe_later">Later</string>
    <string name="location_undefined">No location</string>
    <string name="location_add">Add location</string>

    <string name="info_added_on">Added on %s</string>

    <string name="settings_backup_and_restore">Backup &amp; Restore</string>
    <string name="settings_backup">Backup</string>
    <string name="settings_restore">Restore</string>
    <string name="settings_backup_toast">Creating Backup</string>
    <string name="settings_restore_toast">Restoring Backup</string>
    <string name="restore_warning_title">Restore backup?</string>
    <string name="restore_warning_message">This will overwrite your current data.</string>
</resources>