<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/expiries">

    <fragment
        android:id="@+id/expiries"
        android:name="de.koenidv.expiries.ExpiriesFragment"
        android:label="@string/label_expiring"
        tools:layout="@layout/fragment_expiries" />
    <fragment
        android:id="@+id/locations"
        android:name="de.koenidv.expiries.LocationsFragment"
        android:label="@string/label_locations"
        tools:layout="@layout/fragment_locations" />
    <fragment
        android:id="@+id/scan"
        android:name="de.koenidv.expiries.ScanFragment"
        android:label="@string/label_scan"
        tools:layout="@layout/fragment_scan" />
    <fragment
        android:id="@+id/search"
        android:name="de.koenidv.expiries.SearchFragment"
        android:label="@string/label_search"
        tools:layout="@layout/fragment_search" />
</navigation>